# scrcpy-tanstack

./: .env.example  CHANGELOG.md  README.md  ROADMAP.md  app.json  index.html  package.json
.github/workflows/: release.yml
docs/: CHANGELOG.md  ROADMAP.md  clipboard.md
scripts/: prepare-binaries.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: apps.rs  device.rs  files.rs  mirror.rs  miunlock.rs  mod.rs  system.rs
src/components/: app-sidebar.tsx  command-palette.tsx  download-progress.tsx  download-provider.tsx  nav-projects.tsx  nav-user.tsx
src/components/devices/: connection-wizard.tsx
src/components/layout/: app-sidebar.tsx  device-selector.tsx
src/components/ui/: pagination.tsx  progress.tsx  sidebar.tsx
src/hooks/: use-apps.ts  use-devices.tsx  use-files.ts  use-hash-route.ts  use-mirror.ts  use-miunlock.ts  use-settings.tsx  use-system.ts  use-tauri-event.ts  use-theme.tsx
src/lib/: config.ts  query-client.ts  tauri.ts  utils.ts
src/pages/: apps.tsx  camera.tsx  clipboard.tsx  dashboard.tsx  devices.tsx  files.tsx  gallery.tsx  livestream.tsx  logs.tsx  mi-unlock.tsx  mirror.tsx  monitor.tsx  settings.tsx  shell.tsx  tcpip.tsx
