[package]
name = "scrcpygui-pro"
version = "0.1.2"
description = "ScrcpyGUI Pro - Android Device Manager"
authors = ["RAFZ"]
edition = "2021"

[lib]
name = "scrcpygui_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1.44"
dirs = "6"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = "2"
chrono = "0.4.44"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
zip = "2"
fs_extra = "1"
aes = "0.8.4"
cbc = "0.1.2"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.10.0"
urlencoding = "2.1.3"
md5 = "0.8.0"
cipher = { version = "0.4.4", features = ["alloc"] }
block-padding = "0.4.2"

